--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -21,10 +21,20 @@ h1, h2, h3, h4 {
 .date {
     float: right;
     color: #828282;
-    margin-right: 10px;
+    margin-right: 5px;
+}
+
+.publish {
+    float: right;
+    margin-right: 5px;
 }
 
 .edit {
+    float: right;
+    margin-right: 5px;
+}
+
+.remove {
     float: right;
 }
 
