--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% load staticfiles %}
 
 <html>
@@ -12,6 +13,7 @@
 <div class="page-header">
     {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
     {% endif %}
     <h1><a href="/">samplesite</a></h1>
 </div>
