--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,15 +1,24 @@
+<!DOCTYPE html>
 {% extends 'blog/base.html' %}
 
 {% block content %}
     <div class="post">
         {% if user.is_authenticated %}
-            <a class="edit btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span
+            <a class="remove btn btn-default btn-sm" href="{% url 'post_remove' pk=post.pk %}"><span
+                    class="glyphicon glyphicon-remove"></span></a>
+            <a class="edit btn btn-default btn-sm" href="{% url 'post_edit' pk=post.pk %}"><span
                     class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
+
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
+        {% else %}
+            {% if user.is_authenticated %}
+                <a class="publish btn btn-default btn-sm" href="{% url 'post_publish' pk=post.pk %}"
+                   role="button">Publish</a>
+            {% endif %}
         {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
